tests/ui/invalid-harnesses/expected
warning: duplicate attribute\
invalid.rs:\
|\
| #[kani::proof]\
| ^^^^^^^^^^^^^^

error: functions used as harnesses cannot have any arguments\
invalid.rs:\
|\
| #[kani::proof]
| ^^^^^^^^^^^^^^

error: the `proof` attribute cannot be applied to generic functions\
invalid.rs:\
|\
| #[kani::proof]\
| ^^^^^^^^^^^^^^
